# bbdc-bot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
bbdc-bot/: config.py  logger.py  main.py  models.py  telegram.py  utils.py
bbdc-bot/api/: __init__.py  models.py  practical.py
config/: example.yaml
